[gd_scene load_steps=12 format=2]

[ext_resource path="res://elementos/imagem/jogador/menu/subir_habilidade.png" type="Texture" id=1]
[ext_resource path="res://elementos/imagem/jogador/menu/aumentar.png" type="Texture" id=2]
[ext_resource path="res://elementos/imagem/jogador/menu/expandir_selecionado.png" type="Texture" id=3]
[ext_resource path="res://elementos/imagem/jogador/menu/expandir.png" type="Texture" id=4]
[ext_resource path="res://elementos/imagem/jogador/menu/aumentar_selecionado.png" type="Texture" id=5]
[ext_resource path="res://recursos/jogo/menu_de_habilidade/menu_de_habilidade.gd" type="Script" id=6]
[ext_resource path="res://elementos/fontes/roboto.tres" type="DynamicFont" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[sub_resource type="Theme" id=4]
default_font = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=3]
radius = 400.0

[node name="menu_de_habilidade" type="Node2D"]
script = ExtResource( 6 )

[node name="Mostrar" type="TouchScreenButton" parent="."]
position = Vector2( 574, 153 )
scale = Vector2( 0.109375, 0.109375 )
normal = ExtResource( 1 )
shape = SubResource( 1 )

[node name="Pontos" type="RichTextLabel" parent="Mostrar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1883.43
margin_top = -438.857
margin_right = -1788.43
margin_bottom = -375.857
rect_scale = Vector2( 15, 15 )
theme = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="Menu" type="Node2D" parent="."]
visible = false

[node name="Area" type="TouchScreenButton" parent="Menu"]
position = Vector2( 61, 559 )
scale = Vector2( 1.315, 1.315 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )
shape = SubResource( 2 )

[node name="NumeroDePessoas" type="TouchScreenButton" parent="Menu"]
position = Vector2( 434, 599 )
scale = Vector2( 0.330078, 0.330078 )
normal = ExtResource( 2 )
pressed = ExtResource( 5 )
shape = SubResource( 3 )

[connection signal="pressed" from="Mostrar" to="." method="_on_Mostrar_pressed"]
[connection signal="pressed" from="Menu/Area" to="." method="_on_Area_pressed"]
[connection signal="pressed" from="Menu/NumeroDePessoas" to="." method="_on_NumeroDePessoas_pressed"]
